Accessibilty: images and form fields

--- a/_scripts/dojo/dojox/grid/compat/tests/test_yahoo_search.html
+++ b/_scripts/dojo/dojox/grid/compat/tests/test_yahoo_search.html
@@ -121,8 +121,8 @@
 <body>
 <div style="font-weight: bold; padding-bottom: 0.25em;">dojox.Grid - Yahoo Search Test</div>
 <div style="padding-bottom: 3px;">
-	<label><input id="webRb" type="radio" name="searchType" checked>Web</label>&nbsp;&nbsp;
-	<label><input id="imageRb" type="radio" name="searchType">Images</label>
+	<label for="webRb"><input id="webRb" type="radio" title="web" name="searchType" checked>Web</label>&nbsp;&nbsp;
+	<label for="imageRb"><input id="imageRb" type="radio" title="images" name="searchType">Images</label>
 </div>	
 <input id="searchInput" type="text" value="apple">&nbsp;&nbsp;
 <button onclick="doSearch()">Search</button><br><br>
