--- a/_scripts/dojo/dojox/off/resources/offline-widget.html
+++ b/_scripts/dojo/dojox/off/resources/offline-widget.html
@@ -8,8 +8,8 @@
 <div id="dot-widget-container" style="visibility: hidden;">
 	<div id="dot-widget-title-bar">
 		<span id="dot-widget-network-indicator">
-			<img id="dot-widget-network-indicator-online" />
-			<img id="dot-widget-network-indicator-offline" />
+			<img id="dot-widget-network-indicator-online" alt="" />
+			<img id="dot-widget-network-indicator-offline" alt="" />
 		</span>
 		<span id="dot-widget-title-text"></span>
 	</div>
@@ -21,8 +21,8 @@
 		</div>
 		
 		<div id="dot-sync-status">
-			<img id="dot-roller" />
-			<img id="dot-success-checkmark" />
+			<img id="dot-roller" alt="" />
+			<img id="dot-success-checkmark" alt="" />
 			<span id="dot-sync-messages"></span>
 			<span id="dot-sync-details">
 				(<a id="dot-sync-details-button" href="#">details</a>)
