--- a/_scripts/dojo/dojox/widget/ColorPicker/ColorPicker.html
+++ b/_scripts/dojo/dojox/widget/ColorPicker/ColorPicker.html
@@ -1,7 +1,7 @@
 <div class="dojoxColorPicker" dojoAttachEvent="onkeypress: _handleKey">
 	<div class="dojoxColorPickerBox">
 		<div dojoAttachPoint="cursorNode" tabIndex="0" class="dojoxColorPickerPoint"></div>
-		<img dojoAttachPoint="colorUnderlay" dojoAttachEvent="onclick: _setPoint" class="dojoxColorPickerUnderlay" src="${_underlay}">
+		<img dojoAttachPoint="colorUnderlay" dojoAttachEvent="onclick: _setPoint" class="dojoxColorPickerUnderlay" src="${_underlay}" alt="">
 	</div>
 	<div class="dojoxHuePicker">
 		<div dojoAttachPoint="hueCursorNode" tabIndex="0" class="dojoxHuePickerPoint"></div>
