--- a/_scripts/dojo/dojox/grid/compat/tests/test_change_structure.html
+++ b/_scripts/dojo/dojox/grid/compat/tests/test_change_structure.html
@@ -86,7 +86,7 @@
 				],
 				[
 					{name: 'Beans', value: 'Happy to be grid!'},
-					{name: 'Orange', value: '<img src="images/flatScreen.gif" height="48" width="48">'},
+					{name: 'Orange', value: '<img src="images/flatScreen.gif" height="48" width="48" alt="">'},
 					{name: 'Tomato', value: '<input name="" type="file">'}
 				], [
 					{name: 'Zuchini', value: '<span style="letter-spacing: 10em;">wide</span>', colSpan: 3}
